@@ -1,6 +1,6 @@
 = Welcome to Ubuntu 8.04 'Hardy Heron' =
 
-*** THIS IS AN ALPHA RELEASE ***
+*** THIS IS AN BETA RELEASE ***
 
 The Ubuntu team is proud to announce Ubuntu 8.04 'Hardy Heron'.
 
