@@ -3,8 +3,9 @@ update-manager (1:0.87.13) hardy; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - only ask once about the sshd (LP: #156625)
   * DistUpgrade/DistUpgradeCache.py:
-    - add hardyQuirks handler to deal with
-      gtranslator/gvfs issues (thanks to Daniel Holbach)
+    - add hardyQuirks handler to deal with a
+      gnome-translate upgrade issues (thanks to Daniel Holbach)
+    - fix naming of the quirksHandlers
   * DistUpgrade/DistUpgrade.cfg:
     - add "ksplash-engine-moodin" to ForcedObsoletes
   * DistUpgrade/removal_blacklist.cfg:
@@ -17,6 +18,11 @@ update-manager (1:0.87.13) hardy; urgency=low
   * DistUpgrade/DistUpgradeCache.py:
     - fix bug that prevented proper error message on 
       upgrade calculation error in the text frontend
+    - show the demoted packages in a more readable
+      manner
+    - fix text download progress
+  * DistUpgrade/ReleaseAnnouncement
+    - updated for BETA
 
  --
 
